--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ before_install:
 - gem install bundler
 - sudo apt-get update && sudo apt-get install cabal-install ghc
 script:
+- make 
 - make tests
