--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 before_install:
 - gem install bundler
 - sudo apt-get update && sudo apt-get install cabal-install ghc
+- cabal update
+- cabal install Cabal cabal-install
 script:
 - make 
 - make tests
