--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+language: haskell
+ghc: 8.0.0
+
 before_install:
-- gem install bundler
-- sudo apt-get update && sudo apt-get install cabal-install ghc
 - cabal update
 script:
 - make 
