--- a/hs-examples.cabal
+++ b/hs-examples.cabal
@@ -43,14 +43,14 @@ build-type:          Simple
 extra-source-files:  README.md
 
 -- Constraint on the version of Cabal needed to build this package.
-cabal-version:       >=1.10
+cabal-version:       >=1.18
 
 test-suite hs-examplestest
   type:               exitcode-stdio-1.0
   main-is:            hs-examples-tests.hs
   hs-source-dirs:     tests
   default-language:   Haskell2010
-  build-depends:      base >=4.9 && <4.10,
+  build-depends:      base,
                       test-framework,
                       test-framework-hunit,
                       HUnit, hs-examples
