--- a/hs-examples.cabal
+++ b/hs-examples.cabal
@@ -56,7 +56,7 @@ test-suite hs-examplestest
                       HUnit, hs-examples
 
 library
-    exposed-modules: ContravariantExample, KleisliExample, FactorialExample
+    exposed-modules: ContravariantExample, KleisliExample, FactorialExample, MonadExample
     build-depends: base, contravariant
     hs-source-dirs: src
     default-language: Haskell2010
